# MessageFlux

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  all-extra-requirements.txt  compute_new_version.py  make_all_extra_requirements.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements-fastmessage.txt  requirements-is_alive.txt  requirements-is_alive_mypy.txt  requirements-objectstorage.txt  requirements-pydantic.txt  requirements-rabbitmq.txt  requirements-sqs.txt  requirements-sqs_mypy.txt  requirements.txt  requirements_rabbitmq.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy-prod.yml  deploy-staging.yml  deploy.yml  tests.yml  update-readme.yml
_custom_build/: backend.py  make_all_extra_requirements.py
baseservice/: __init__.py  base_service.py  device_reader_service.py  metadata_headers.py  pipeline_service.py  server_loop_service.py  utils.py
baseservice/async_service/: async_device_reader_service.py  async_server_loop_service.py
baseservice/iodevices/: common.py  input_devices.py  output_devices.py
baseservice/iodevices/async_devices/: async_input_devices.py  async_input_transaction.py
baseservice/iodevices/base/: __init__.py  common.py  input_devices.py  input_output_devices.py  input_transaction.py  null_transaction.py  output_devices.py
baseservice/iodevices/file_system/: __init__.py  file_system_device_manager_base.py  file_system_input_device.py  file_system_output_device.py  file_system_serializer.py
baseservice/iodevices/in_memory_device/: __init__.py  in_memory_device_manager.py
baseservice/iodevices/message_store_device_wrapper/: __init__.py  file_system_message_store.py  mesage_store_input_device.py  mesage_store_output_device.py  message_store_base.py  message_store_input_device.py  message_store_output_device.py  message_store_transformer_base.py
baseservice/iodevices/rabbitmq/: __init__.py  fs_poison_counter.py  rabbitmq_device_manager_base.py  rabbitmq_input_device.py  rabbitmq_output_device.py  rabbitmq_poison_counting_input_device.py
baseservice/iodevices/short_circuit_device_wrapper/: common.py  short_circuit_input_device.py  short_circuit_output_device.py
baseservice/iodevices/transformer_device_wrapper/: __init__.py  transformer_base.py  transformer_input_device.py  transformer_output_device.py  zlib_transformer.py
baseservice/logging/: LogType.py  __init__.py  bulk_rotating_device_handler.py  bulk_rotating_file_handler.py  bulk_rotating_handler_base.py  utils.py
baseservice/multiprocessing/: __init__.py  multiprocessrunner.py  singleprocesshandler.py
baseservice/service_addons/: __init__.py  loop_health_addon.py
baseservice/utils/: __init__.py  context.py  filesystem.py
docs/: SUMMARY.md  api.md  contribute.md  gen_ref_pages.py  index.md  requirements.txt
docs/contribute/: SUMMARY.md  code.md  docs.md
docs/css/: extra.css
docs/examples/simple_fastmessage_app/: app.py  (+2 more)
docs/tutorial/: SUMMARY.md  addons.md  devices.md  fastmessage.md  logging.md  multiprocessing.md  services.md
messageflux/: __init__.py  __main__.py  base_service.py  config.py  device_reader_service.py  fastmessage.py  fastmessage_handler.py  importer.py  main.py  message_handling_service.py  pipeline_service.py  pydantic_handler.py  server_loop_service.py
messageflux/iodevices/: __init__.py
messageflux/logging/: bulk_rotating_device_handler.py  bulk_rotating_file_handler.py  bulk_rotating_handler_base.py  utils.py
messageflux/multiprocessing/: __init__.py  multiprocessrunner.py  singleprocesshandler.py
messageflux/service_addons/: __init__.py  is_alive_addon.py  loop_health_addon.py  webserver_liveness_addon.py
messageflux/utils/: __init__.py  context.py  filesystem.py  rate_limiter.py
tests/: device_reader_service_test.py  fastmessage_handler_test.py  message_handling_service_test.py  multi_processing_test.py  pipeline_service_test.py  pydantic_handler_test.py  test_sanity.py  utils_test.py
tests/devices/: common.py  failover_test.py  file_system_test.py  in_memory_device_test.py  message_store_device_test.py  message_store_test.py  mocks.py  objectstorage_test.py  rabbitmq_test.py  roundrobin_test.py  short_circuit_device_test.py  sqs_test.py  transformer_device_test.py
tests/logging_tests/: bulk_rotating_file_handler_test.py
tests/utils/: context_test.py  utils_test.py
(+62 files in other folders)
