[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "messageflux"
requires-python = '>=3.7,<3.11'
readme = "README.md"
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
dynamic = [
    "dependencies",
    "version",
    "optional-dependencies"
]

[project.urls]
github-repo = "https://github.com/Avivsalem/BaseService"

[[project.authors]]
name = "Aviv Salem"
email = "avivsalem@gmail.com"

[[project.maintainers]]
name = "Aviv Salem"
email = "avivsalem@gmail.com"

[[project.maintainers]]
name = "Nir Schulman"
email = "narsssx@gmail.com"

[[project.maintainers]]
name = "Rafael Zilberman"
email = "Zilberman.rafi@gmail.com"


[tool.setuptools]
platforms = [
    "win32",
    "linux"
]

[tool.setuptools.packages.find]
include = ['messageflux', 'messageflux.*']

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { file = "VERSION" }


[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }
rabbitmq = { file = "requirements-rabbitmq.txt" }
objectstorage = { file = "requirements-objectstorage.txt" }
all = { file = "requirements-all.txt" }




